add banner entry, top footer and footer coppyright

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
             <div class="col-xl-2 col-lg-6 col-6">
               <div class="btn-end-header">
                 <a class="btn-user d-xl-none d-block"
-                  ><i class="fas fa-user-circle"></i 
-                    
+                  ><i class="fas fa-user-circle"></i
                 ></a>
                 <a class="btn-search"><i class="fas fa-search"></i></a>
                 <a class="btn-sign d-none d-xl-block">Sign In</a>
@@ -123,6 +122,81 @@
       </div>
     </header>
     <!-- end header -->
+
+    <!-- start banner  -->
+    <div class="entry-content pdt--50">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 col-md-12 col-sm-12 col-12">
+            <img src="./assets/images/Main-slider_pic-768x532.jpg" />
+          </div>
+          <div class="col-lg-5 cl-md-12 col-sm-12 col-12">
+            <div class="vc_empty_space"></div>
+            <div class="wpb_wrapper">
+              <h2>Discover, Collect & Sell <span>Extraordinary</span> NFTs</h2>
+              <p>
+                The Crypto Monkey is a high-quality collection of 100 unique
+                monkeys on the NFTMart marketplace.
+              </p>
+              <a class="btn-discover-entry" href="#">Discover</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end banner -->
+
+
+    <!-- start footer -->
+    <footer class="has-footer-widgets pdt--50">
+      <!-- start top footer  -->
+      <div class="top-footer">
+        <div class="container">
+          <div class="slick-list-top-header">
+            <div class="item">
+              <img src="./assets/images/logo/Main-Client1.png">
+            </div>
+            <div class="item">
+              <img src="./assets/images/logo/Main-Client6.png">
+            </div>
+            <div class="item">
+              <img src="./assets/images/logo/Main-Client4.png">
+            </div>
+            <div class="item">
+              <img src="./assets/images/logo/Main-Client3.png">
+            </div>
+            <div class="item">
+              <img src="./assets/images/logo/Main-Client2.png">
+            </div>
+            <div class="item">
+              <img src="./assets/images/logo/Main-Client1.png">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end top footer  -->
+      <!-- start container-footer  -->
+      <div class="container-footer">
+        <div class="container">
+        </div>
+      </div>
+      <!-- end container-footer  -->
+      <!-- start footer-coppyright  -->
+      <div class="footer-coppyright">
+        <div class="container">
+          <div class=" row">
+            <div class="col-md-6 col-sm-12 col-12">
+              <p>Copyright by ModelTheme. All Rights Reserved.</p>
+            </div>
+            <div class="col-md-6 col-sm-12 col-12">
+              <p class="coppyright">Elite Author on ThemeForest.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end footer-coppyright  -->
+    </footer>
+    <!-- end footer -->
 
     <!-- JS =================== -->
     <script src="./assets/js/bootstrap.min.js"></script>
