--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
     </div>
     <!-- end banner -->
 
-
     <!-- start footer -->
     <footer class="has-footer-widgets pdt--50">
       <!-- start top footer  -->
@@ -154,22 +153,22 @@
         <div class="container">
           <div class="slick-list-top-header">
             <div class="item">
-              <img src="./assets/images/logo/Main-Client1.png">
+              <img src="./assets/images/logo/Main-Client1.png" />
             </div>
             <div class="item">
-              <img src="./assets/images/logo/Main-Client6.png">
+              <img src="./assets/images/logo/Main-Client6.png" />
             </div>
             <div class="item">
-              <img src="./assets/images/logo/Main-Client4.png">
+              <img src="./assets/images/logo/Main-Client4.png" />
             </div>
             <div class="item">
-              <img src="./assets/images/logo/Main-Client3.png">
+              <img src="./assets/images/logo/Main-Client3.png" />
             </div>
             <div class="item">
-              <img src="./assets/images/logo/Main-Client2.png">
+              <img src="./assets/images/logo/Main-Client2.png" />
             </div>
             <div class="item">
-              <img src="./assets/images/logo/Main-Client1.png">
+              <img src="./assets/images/logo/Main-Client1.png" />
             </div>
           </div>
         </div>
@@ -178,13 +177,82 @@
       <!-- start container-footer  -->
       <div class="container-footer">
         <div class="container">
+          <div class="row">
+            <div class="col-md-3 col-sm-12 col-12">
+              <div class="widget-text">
+                <h3>Our Address</h3>
+                <p>
+                  4 Grand Central Terminal New York, <br />
+                  NY 10 City name, CA 90896 USA.
+                </p>
+                <div class="social-media">
+                  <ul>
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-linkedin"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-12 col-12">
+              <div class="widget-text">
+                <h3>Useful Links</h3>
+                <div class="menu-marketplace">
+                  <ul>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>Collectibles
+                    </li>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>Photography
+                    </li>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>Trading Cards
+                    </li>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>Virtual Worlds
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-12 col-12">
+              <div class="widget-text">
+                <h3>Our Policy</h3>
+                <div class="menu-marketplace">
+                  <ul>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>Help Center
+                    </li>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>My Collections
+                    </li>
+                    <li>
+                      <i class="fas fa-angle-double-right"></i>Platform Status
+                    </li>
+                    <li><i class="fas fa-angle-double-right"></i>Newsletter</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-12 col-12">
+              <div class="widget-text">
+                <h3>Stay Informed By Newsletter</h3>
+                <p>*Subscribe to our newsletter to receive early discount offers and updates.</p>
+                <div class="input-group">
+                  <input class="input-email" placeholder="Enter your email">
+                  <button class="btn-email"><i class="fab fa-telegram-plane"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- end container-footer  -->
       <!-- start footer-coppyright  -->
       <div class="footer-coppyright">
         <div class="container">
-          <div class=" row">
+          <div class="row">
             <div class="col-md-6 col-sm-12 col-12">
               <p>Copyright by ModelTheme. All Rights Reserved.</p>
             </div>
