add Explore NFTs

--- a/index.html
+++ b/index.html
@@ -146,6 +146,118 @@
     </div>
     <!-- end banner -->
 
+    <!-- start explore NFT -->
+    <div class="vc-hottest-bids pdt--50 pdb--50">
+      <div class="container">
+        <div class="row mt-addons-title-subtile">
+          <div class="col-lg-6 col-md-12">
+            <h2>Explore NFTs</h2>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <ul class="vs-tabs-list">
+              <li class="vs-tabs "><a class="is-active">All NFTs</a></li>
+              <li class="vs-tabs"><a>Sale Type</a></li>
+              <li class="vs-tabs"><a>Fixed Price</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/97v7uBu0TGycl_CT73Wds8T22sqLZISSszf4f4mCrPEv5yOLn840HZU4cIyEc9WNpxXhjcyKSKdTuqH7svb3zBfl1ixVtX5Jtc3VzA.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                    Terra Nyan Cat  </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price">£ 0.55 WETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/oWempBJqhTOGeFKxMZFrixYCJ5cgCSc4I-F8E60viT_HhyfUEh28BGDziRHFPLhY6dLyjFCOIA254apBHMLqXfYE4krqfpqDxBzNtw.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                    Nyantendo Nyan Cat   </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price">£ 1 WETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/JbXe_-4u7Ebw3z-UVYWhjlCb11O5lG6lfYCFzN7lNOmhOBm8ipDLdy4laNctSfzsaCLK4Gx64IrG69xwvFgJrX1MmUnh2zOs-vTCqQ.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                    Surfing Nyan Cat   </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price">402.48</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/cqyOMX2ASS7JdSU00vGb6A9lD_KwOgIaBdoMxnCi9gSuP7UEwJF_sUI7jlcKH8t5YeDj0JADvWcdp4jyxkcYevEklcojoL5IbK-KbPs.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                    Fiesta Dog   </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price">£ 1.79 ETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- end explore NFT -->
+
+
+
     <!-- start hottest bids -->
     <div class="vc-hottest-bids pdt--50 pdb--50">
       <div class="container">
@@ -164,7 +276,7 @@
                 </div>
               </div>
               <div class="woocmmerce-title-metas">
-                <div class="title-wishlist-wrapper" style="height:58px;">
+                <div class="title-wishlist-wrapper" >
                   <h3>
                     Avidlines #349831649 </h3>
                     <i class="far fa-heart"></i>
@@ -185,7 +297,7 @@
                 </div>
               </div>
               <div class="woocmmerce-title-metas">
-                <div class="title-wishlist-wrapper" style="height:58px;">
+                <div class="title-wishlist-wrapper">
                   <h3>
                     Azuki #9990  </h3>
                     <i class="far fa-heart"></i>
@@ -206,7 +318,7 @@
                 </div>
               </div>
               <div class="woocmmerce-title-metas">
-                <div class="title-wishlist-wrapper" style="height:58px;">
+                <div class="title-wishlist-wrapper">
                   <h3>
                     FoxFam #9996  </h3>
                     <i class="far fa-heart"></i>
@@ -227,7 +339,7 @@
                 </div>
               </div>
               <div class="woocmmerce-title-metas">
-                <div class="title-wishlist-wrapper" style="height:58px;">
+                <div class="title-wishlist-wrapper">
                   <h3>
                     Lucky Zero #3332  </h3>
                     <i class="far fa-heart"></i>
