add svg price and add create sell NFTs

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
           </div>
           <div class="col-lg-6 col-md-12">
             <ul class="vs-tabs-list">
-              <li class="vs-tabs "><a class="is-active">All NFTs</a></li>
-              <li class="vs-tabs"><a>Sale Type</a></li>
-              <li class="vs-tabs"><a>Fixed Price</a></li>
+              <li class="vs-tabs is-active"><a><i class="far fa-list-alt"></i> All NFTs</a></li>
+              <li class="vs-tabs"><a><i class="fas fa-stream"></i>Sale Type</a></li>
+              <li class="vs-tabs"><a> <i class="fas fa-stream"></i>Fixed Price</a></li>
             </ul>
           </div>
         </div>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="details-container">
                   <span class="name">Reserve Price</span>
-                  <span class="price">£ 0.55 WETH</span>
+                  <span class="price"><img src="./assets/images/price/accae6b6fb3888cbff27a013729c22dc.svg" width="10" height="16" style="margin-right:5px;">  0.55 WETH</span>
                 </div>
               </div>
             </div>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="details-container">
                   <span class="name">Reserve Price</span>
-                  <span class="price">£ 1 WETH</span>
+                  <span class="price"><img src="./assets/images/price/accae6b6fb3888cbff27a013729c22dc.svg" width="10" height="16" style="margin-right:5px;"> 1 WETH</span>
                 </div>
               </div>
             </div>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="details-container">
                   <span class="name">Reserve Price</span>
-                  <span class="price">402.48</span>
+                  <span class="price">£ 402.48</span>
                 </div>
               </div>
             </div>
@@ -245,7 +245,95 @@
                 </div>
                 <div class="details-container">
                   <span class="name">Reserve Price</span>
-                  <span class="price">£ 1.79 ETH</span>
+                  <span class="price"><img src="./assets/images/price/6f8e2979d428180222796ff4a33ab929.svg" width="10" height="16" style="margin-right:5px;"> 1.79 ETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/KayaP_ZkmJsN07hWFx6YXMf_pb9Psy2PWDC4ZFJ-DAJAYsRpUKFoQz8GMrv-H5sthyVrpQ-J4tos41qGMYzDsOZ4BN_3fhY5Wqndkqo.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                   Biker Nyan Cat   </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price"><img src="./assets/images/price/6f8e2979d428180222796ff4a33ab929.svg" width="10" height="16" style="margin-right:5px;"> 1.49 ETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/hGAXFle2y2umRCQsEOS9daKXhf8sC2KLrubAnZzUdTGBnSazCeymBFuHgy2MTu0BcQQrMzGa_siuzpqqHJvzdHOGVnU2FHOysjSl.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                    Star-Spangled Nyan Cat   </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price"><img src="./assets/images/price/6f8e2979d428180222796ff4a33ab929.svg" width="10" height="16" style="margin-right:5px;"> 2.25 ETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/pfRjRVITeeQs3OBvhnDUU8Us6eV57bbr5AoAbb57J0qn52cKKndMe2prIswKX_u48slpha66UWGoe_8GZj94l1JFGP7vAFHzRN7u.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                   Angelic Nyan Cat   </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price"><img src="./assets/images/price/accae6b6fb3888cbff27a013729c22dc.svg" width="10" height="16" style="margin-right:5px;"> 1 WETH</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 product-items">
+            <div class="product-wrapper">
+              <div class="thumbnail-and-details">
+                <img src="./assets/images/gif/pXF_Q3Ox7aFHgWgHjdE7c_bU6GpNshQjK6Y1xayiAPU2YKYAaKByaJNERGQD1u1MEJ0HfyMBCh6F0RFW-VFKGDLNsDRx3cOG8oZv.gif">
+                <div class="thumbnail-product-button">
+                  <div class="content-inside"><a><i class="fas fa-gavel"></i>
+                    Place a bid </a></div>
+                </div>
+              </div>
+              <div class="woocmmerce-title-metas">
+                <div class="title-wishlist-wrapper" >
+                  <h3>
+                    Magical Nyan Cat    </h3>
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="details-container">
+                  <span class="name">Reserve Price</span>
+                  <span class="price"><img src="./assets/images/price/accae6b6fb3888cbff27a013729c22dc.svg" width="10" height="16" style="margin-right:5px;"> 0.8 WETH</span>
                 </div>
               </div>
             </div>
@@ -253,10 +341,50 @@
         </div>
       </div>
     </div>
-
     <!-- end explore NFT -->
 
-
+    <!-- start create sell NFT -->
+    <div class="start-create-sell-NFT">
+      <div class="container vc-column-innner">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="title-section">Create and Sell Your NFTs</h2>
+          </div>
+        </div>
+        <div style="height: 50px;"></div>
+        <div class="row">
+          <div class="col-md-3 item-sell">
+            <div class="icon-subtile"><a><span><i class="fas fa-wallet"></i></span></a></div>
+            <div class="title-subtile">
+              <p>Set up your Wallet</p>
+            <span>Et ligula ullamcorper malesuada proin libero nunc consequat. Sagittis aliquam malesuada bibendum arcu.</span>
+            </div>
+          </div>
+          <div class="col-md-3 item-sell">
+            <div class="icon-subtile"><a><span><i class="fas fa-image"></i></span></a></div>
+            <div class="title-subtile">
+              <p>Create your Collection</p>
+            <span>At in tellus integer feugiat scelerisque varius morbi enim nunc. Faucibus ornare suspendisse sed nisi lacus.</span>
+            </div>
+          </div>
+          <div class="col-md-3 item-sell">
+            <div class="icon-subtile"><a><span><i class="fas fa-tv-alt"></i></span></a></div>
+            <div class="title-subtile">
+              <p>Add your NTFs</p>
+            <span>Varius sit amet mattis vulputate enim nulla. Pulvinar mattis nunc sed blandit libero volutpat sed. In nulla.</span>
+            </div>
+          </div>
+          <div class="col-md-3 item-sell">
+            <div class="icon-subtile"><a><span><i class="fab fa-telegram-plane"></i></span></a></div>
+            <div class="title-subtile">
+              <p>List item for Sale</p>
+            <span>Placerat vestibulum lectus mauris ultrices eros. Cursus vitae congue mauris rhoncus aenean vel.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end create sell NFT -->
 
     <!-- start hottest bids -->
     <div class="vc-hottest-bids pdt--50 pdb--50">
@@ -304,7 +432,7 @@
                 </div>
                 <div class="details-container">
                   <span class="name">Reserve Price</span>
-                  <span class="price">£ 19.8 ETH</span>
+                  <span class="price"><img src="./assets/images/price/6f8e2979d428180222796ff4a33ab929.svg" width="10" height="16" style="margin-right:5px;"> 19.8 ETH</span>
                 </div>
               </div>
             </div>
