add code trending collection

--- a/index.html
+++ b/index.html
@@ -146,6 +146,105 @@
     </div>
     <!-- end banner -->
 
+
+    <!-- start trending collection  -->
+    <div class="vc-trending-collection pdt--50 pdb--50">
+      <div class="container">
+        <div class="title-subtile" style="margin-bottom: 30px;">
+          <h2>Trending Collections</h2>
+        </div>
+        <div class="slick-collections">
+          <div class="col-md-12">
+            <div class="swipper-slide">
+              <div class="mt-images-wrapper-4">
+                <a><img src="./assets/images/collection/QmfYZdU7ARHdMtvc3ZdGNsbSRjxnYzFmedSjVzSpoXocKp-149x100.png"></a>
+                <a><img src="./assets/images/collection/3332-1-149x100.png"></a>
+                <a><img src="./assets/images/collection/3327-149x100.png"></a>
+                <a><img src="./assets/images/collection/9944.png-149x100.png"></a>
+              </div>
+              <div class="mt-collection-wrapper">
+                <img src="./assets/images/QmVQE36eU6mZsHjDVTP1vY1Hw9ix3XEwAhWtDRJ23NktxK-70x70.png">
+              </div>
+              <div class="mt-collection-info">
+                <a class="mt-addons-title">Doodles</a> 
+                <span class="mt-addons-subtitle">12 items</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="swipper-slide">
+              <div class="mt-images-wrapper-4">
+                <a><img src="./assets/images/collection/3315-149x100.png"></a>
+                <a><img src="./assets/images/collection/3318-149x100.png"></a>
+                <a><img src="./assets/images/collection/3327-149x100.png"></a>
+                <a><img src="./assets/images/collection/3332-1-149x100.png"></a>
+              </div>
+              <div class="mt-collection-wrapper">
+                <img src="./assets/images/Main-collector_img3-70x70.jpg">
+              </div>
+              <div class="mt-collection-info">
+                <a class="mt-addons-title">Lucky Zeros</a> 
+                <span class="mt-addons-subtitle">4 items</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="swipper-slide">
+              <div class="mt-images-wrapper-4">
+                <a><img src="./assets/images/collection/4a65a51a.png-149x100.png"></a>
+                <a><img src="./assets/images/collection/85413492.png-149x100.png"></a>
+                <a><img src="./assets/images/collection/48471a85.png-149x100.png"></a>
+                <a><img src="./assets/images/collection/85a35416.png-149x100.png"></a>
+              </div>
+              <div class="mt-collection-wrapper">
+                <img src="./assets/images/4a65a51a.png-70x70.png">
+              </div>
+              <div class="mt-collection-info">
+                <a class="mt-addons-title">PhantaBear</a> 
+                <span class="mt-addons-subtitle">7 items</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="swipper-slide">
+              <div class="mt-images-wrapper-4">
+                <a><img src="./assets/images/collection/QmW2axk7df1WXJrs8ypnhjob3FcsiwXj5ATUb344xabP8A-149x100.png"></a>
+                <a><img src="./assets/images/collection/QmW45if4a42Ym4nm1SgCNDsA6wfcvYbUAUksKLCFrLfh6t-149x100.png"></a>
+                <a><img src="./assets/images/collection/738263536.png-149x100.png"></a>
+                <a><img src="./assets/images/collection/349831649.png-149x100.png"></a>
+              </div>
+              <div class="mt-collection-wrapper">
+                <img src="./assets/images/QmVQE36eU6mZsHjDVTP1vY1Hw9ix3XEwAhWtDRJ23NktxK-70x70.png">
+              </div>
+              <div class="mt-collection-info">
+                <a class="mt-addons-title">Avid Lines</a> 
+                <span class="mt-addons-subtitle">6 items</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="swipper-slide">
+              <div class="mt-images-wrapper-4">
+                <a><img src="./assets/images/collection/Qma19PwAFc6xTBmju6ydo3d7MPe3bgszz71tnL9N158XX1-149x100.png"></a>
+                <a><img src="./assets/images/collection/QmUTKkqSC6qpXFwsCDqWE1nKVPoipgbLtmvwVW317wVGqM-149x100.png"></a>
+                <a><img src="./assets/images/collection/QmW2axk7df1WXJrs8ypnhjob3FcsiwXj5ATUb344xabP8A-149x100.png"></a>
+                <a><img src="./assets/images/collection/QmW45if4a42Ym4nm1SgCNDsA6wfcvYbUAUksKLCFrLfh6t-149x100.png"></a>
+              </div>
+              <div class="mt-collection-wrapper">
+                <img src="./assets/images/Main-collection_img1-70x70.png">
+              </div>
+              <div class="mt-collection-info">
+                <a class="mt-addons-title">FoxFam</a> 
+                <span class="mt-addons-subtitle">18 items</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div?>
+    </div>
+    </div>
+    <!-- end trending collection  -->
+
     <!-- start explore NFT -->
     <div class="vc-hottest-bids pdt--50 pdb--50">
       <div class="container">
@@ -342,6 +441,99 @@
       </div>
     </div>
     <!-- end explore NFT -->
+
+    <!-- start trending collectors -->
+    <div class="vc-trending-collectors pdt--50 pdb--50">
+      <div class="container">
+        <div class="title-subtile">
+          <h2>Trending Collectors</h2>
+          <span>Fine art collectors are in a upward this week</span>
+        </div>
+        <div class="mt-categories row">
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/4a65a51a.png-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>PhantaBear</a>
+                <span>7 items</span>
+              </div>
+              <span class="mt-count-number">1</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/QmVQE36eU6mZsHjDVTP1vY1Hw9ix3XEwAhWtDRJ23NktxK-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>Doodles</a>
+                <span>12 items</span>
+              </div>
+              <span class="mt-count-number">2</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/Main-collection_img1-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>FoxFam</a>
+                <span>18 items</span>
+              </div>
+              <span class="mt-count-number">3</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/Main-collector_img2-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>Avid Lines</a>
+                <span>6 items</span>
+              </div>
+              <span class="mt-count-number">4</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/Main-collector_img3-70x70.jpg"></a>
+              <div class="mt-single-category-info">
+                <a>Lucky Zeros</a>
+                <span>4 items</span>
+              </div>
+              <span class="mt-count-number">5</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/9981.png-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>Azuki</a>
+                <span>6 items</span>
+              </div>
+              <span class="mt-count-number">6</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/9977.png-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>Coolman's</a>
+                <span>6 items</span>
+              </div>
+              <span class="mt-count-number">7</span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="mt-single-category-wrap">
+              <a><img src="./assets/images/Main-collector_img6-70x70.png"></a>
+              <div class="mt-single-category-info">
+                <a>Archetype</a>
+                <span>4 items</span>
+              </div>
+              <span class="mt-count-number">8</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end trending collectors -->
 
     <!-- start create sell NFT -->
     <div class="start-create-sell-NFT">
