add header dropdown Home and collectors and add btn prev - next

--- a/index.html
+++ b/index.html
@@ -51,8 +51,117 @@
             </div>
             <div class="col-xl-7 col-lg-8 col-sm-8 d-none d-xl-block">
               <ul class="menu-nav">
-                <li><a>Home</a></li>
-                <li><a>Collectors</a></li>
+                <li class="has-dropdown"><a>Home</a>
+                  <div class="row menu-home menu-dropdown">
+                    <div class="col-md-4 menu-home-item">Main Home</div>
+                    <div class="col-md-4 menu-home-item">Crypto Investments</div>
+                    <div class="col-md-4 menu-home-item">NFT Musician</div>
+                    <div class="col-md-4 menu-home-item">Metaverse</div>
+                    <div class="col-md-4 menu-home-item">Crypto Wallet</div>
+                    <div class="col-md-4 menu-home-item">Crypto Blogging</div>
+                    <div class="col-md-4 menu-home-item">Crypto Consultant</div>
+                    <div class="col-md-4 menu-home-item">Crypto Blockchain</div>
+                    <div class="col-md-4 menu-home-item">Smart Contract</div>
+                    <div class="col-md-4 menu-home-item">Trading Consulting</div>
+                    <div class="col-md-4 menu-home-item">Forex Consulting</div>
+                    <div class="col-md-4 menu-home-item">NFT Marketplace Dark</div>
+                  </div>
+                </li>
+                <li class="has-dropdown">
+                  <a>Collectors</a>
+                  <div class="mt-categories row menu-dropdown ">
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/4a65a51a.png-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>PhantaBear</a>
+                          <span>7 items</span>
+                        </div>
+                        <span class="mt-count-number">1</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/QmVQE36eU6mZsHjDVTP1vY1Hw9ix3XEwAhWtDRJ23NktxK-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>Doodles</a>
+                          <span>12 items</span>
+                        </div>
+                        <span class="mt-count-number">2</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/Main-collection_img1-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>FoxFam</a>
+                          <span>18 items</span>
+                        </div>
+                        <span class="mt-count-number">3</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/Main-collector_img2-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>Avid Lines</a>
+                          <span>6 items</span>
+                        </div>
+                        <span class="mt-count-number">4</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/Main-collector_img3-70x70.jpg"></a>
+                        <div class="mt-single-category-info">
+                          <a>Lucky Zeros</a>
+                          <span>4 items</span>
+                        </div>
+                        <span class="mt-count-number">5</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/9981.png-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>Azuki</a>
+                          <span>6 items</span>
+                        </div>
+                        <span class="mt-count-number">6</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/9977.png-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>Coolman's</a>
+                          <span>6 items</span>
+                        </div>
+                        <span class="mt-count-number">7</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/Main-collector_img6-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>Archetype</a>
+                          <span>4 items</span>
+                        </div>
+                        <span class="mt-count-number">8</span>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                      <div class="mt-single-category-wrap">
+                        <a><img src="./assets/images/Main-collector_img5-70x70.png"></a>
+                        <div class="mt-single-category-info">
+                          <a>Chimera by mpkoz</a>
+                          <span>6 items</span>
+                        </div>
+                        <span class="mt-count-number">9</span>
+                      </div>
+                    </div>
+                  </div>
+                </li>
                 <li class="has-dropdown">
                   <a>NFT Marketplace</a>
                   <ul class="menu-dropdown">
@@ -133,12 +242,12 @@
           <div class="col-lg-5 cl-md-12 col-sm-12 col-12">
             <div class="vc_empty_space"></div>
             <div class="wpb_wrapper">
-              <h2>Discover, Collect & Sell <span>Extraordinary</span> NFTs</h2>
-              <p>
+              <h2 class="css-2yud30">Discover, Collect & Sell <span>Extraordinary</span> NFTs</h2>
+              <p class="css-2yud60">
                 The Crypto Monkey is a high-quality collection of 100 unique
                 monkeys on the NFTMart marketplace.
               </p>
-              <a class="btn-discover-entry" href="#">Discover</a>
+              <a class="btn-discover-entry css-2yud80" href="#">Discover</a>
             </div>
           </div>
         </div>
@@ -152,6 +261,11 @@
       <div class="container">
         <div class="title-subtile" style="margin-bottom: 30px;">
           <h2>Trending Collections</h2>
+        </div>
+        <div class="slick-collection-btn-">
+          <button class="collection-btn-prev">
+            <i class="fas fa-arrow-left"></i>
+          </button>
         </div>
         <div class="slick-collections">
           <div class="col-md-12">
@@ -240,6 +354,11 @@
             </div>
           </div>
         </div>
+        <div class="slick-collection-btn--">
+          <button class="collection-btn-next">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
       </div?>
     </div>
     </div>
@@ -260,7 +379,7 @@
             </ul>
           </div>
         </div>
-        <div class="row">
+        <div class="row vc-hottest-bids-list">
           <div class="col-lg-3 product-items">
             <div class="product-wrapper">
               <div class="thumbnail-and-details">
